--- a/.env-example
+++ b/.env-example
@@ -2,4 +2,10 @@
 
 OPENAI_API_KEY=xxx
 OPENAI_ENDPOINT=api.openai.com/v1/realtime
-OPENAI_MODEL=gpt-4o-realtime-preview-2024-10-01
+# OPENAI_MODEL=gpt-4o-realtime-preview-2024-10-01
+# OPENAI_MODEL=gpt-4o-realtime-preview-2024-12-17
+OPENAI_MODEL=gpt-4o-realtime-preview
+OPENAI_VOICE_NAME=sage
+OPENAI_SYTEM_MESSAGE="I am very happy to have an assistant like you"
+OPENAI_INPUT_AUDIO_TRANSCRIPTION=whisper-1
+OPENAI_TURN_DETECTION_TYPE=server_vad
