--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "openai-connector",
   "version": "1.0.0",
-  "description": "Vonage - OpenAI Connector",
-  "main": "openai-connector.cjs",
+  "description": "Vonage - OpenAI Realtime API Connector",
+  "main": "openai-realtime-connector.cjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
